nifi-registry/deployment-nifi-registry.yml
apiVersion: v1          
kind: Service           
metadata:               
  name: nifi-registry-service    
spec:                   
  selector:             
    app: nifi-registry          
  ports:                
  - protocol: TCP       
    targetPort: 18080    
    port: 18080          
    name: ui          

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nifi-registry
  labels:
    app: nifi-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nifi-registry
  template:
    metadata:
      labels:
        app: nifi-registry
    spec:
      containers:
      - name: nifi-registry
        image: apache/nifi-registry:1.15.2       
        resources:
          requests:
            cpu: ".5"
            memory: "500Mi"
          limits:
            memory: "500Mi"
            cpu: ".5"
        ports:
        - containerPort: 18080
        # env:
        #   - name: SINGLE_USER_CREDENTIALS_USERNAME
        #     value: "admin"
        #   - name: SINGLE_USER_CREDENTIALS_PASSWORD
        #     value: "ctsBtRBKHRAx69EqUghvvgEvjnaLjFEB"
